# structured-data-extractor

./: .env.example  .gitattributes  .gitignore  Dockerfile  LEARN.md  README.md  SHIPPING.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/raw/10k/: AAPL_2025-09-27_10k.meta.json  AAPL_2025-09-27_10k.txt  JPM_2025-12-31_10k.meta.json  JPM_2025-12-31_10k.txt  PFE_2025-12-31_10k.meta.json  PFE_2025-12-31_10k.txt  WMT_2026-01-31_10k.meta.json  WMT_2026-01-31_10k.txt  XOM_2025-12-31_10k.meta.json  XOM_2025-12-31_10k.txt
data/samples/: cord_sample.jsonl  sroie_sample.jsonl
docker/: api.Dockerfile  hf-entrypoint.sh  nginx.conf  nginx.hf.conf  ui.Dockerfile
evaluation/: smoke_cord_sample.jsonl  smoke_filings_sample.jsonl  smoke_sroie_sample.jsonl
evaluation/benchmarks/20260705T064740Z/: comparison.csv  comparison.json  comparison.md
evaluation/benchmarks/20260705T064740Z/gpt-5-mini_minimal_cord/: receipt_gpt-5-mini_re-minimal_per_record.csv  receipt_gpt-5-mini_re-minimal_summary.json  receipt_gpt-5-mini_re-minimal_summary.md
evaluation/reports/20260705T073915Z/: filing_gpt-5-nano_re-minimal_per_record.csv  filing_gpt-5-nano_re-minimal_summary.json  filing_gpt-5-nano_re-minimal_summary.md
evaluation/reports/20260706T042207Z/: filing_gpt-5-nano_re-minimal_per_record.csv  filing_gpt-5-nano_re-minimal_summary.json  filing_gpt-5-nano_re-minimal_summary.md
scripts/: build_filings_gt.py  compare_finetune.py  download_edgar.py  launch_finetune.py  prep_datasets.py  prep_ft_dataset.py  run_eval.py  run_multimodel_benchmark.py
src/api/: batch_store.py  deps.py  errors.py  main.py  middleware.py
src/api/routers/: batch.py  extract.py  health.py  schemas.py  stream.py
src/data_prep/: __init__.py  cord.py  parsers.py  sroie.py  writer.py
src/eval/: __init__.py  cli.py  comparators.py  flatten.py  metrics.py  report.py  runner.py
src/extractors/: __init__.py  document_loader.py  envelope.py  extractor.py  openai_client.py  prompts.py  section_chunker.py
src/schemas/: __init__.py  base.py  common.py  filing.py  invoice.py  receipt.py  registry.py
src/ui/: README.md
src/utils/: config.py  cost_tracker.py  logging.py
tests/unit/: test_api.py  test_api_v3.py  test_data_prep.py  test_eval.py  test_extractor.py  test_filing_schema.py  test_prep_ft_dataset.py  test_schemas.py  test_section_chunker.py
ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
ui/public/samples/: README.txt
ui/src/: App.tsx  types.ts
ui/src/components/: ConfidenceInkwell.tsx  CustomCursor.tsx  Dropzone.tsx  ExtractSection.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  JsonView.tsx  MetricsStrip.tsx  Numbers.tsx  PaperScene.tsx  ResultsPanel.tsx  ThemeToggle.tsx  TopNav.tsx  WarningsList.tsx
ui/src/hooks/: useExtract.ts  useTheme.ts
ui/src/lib/: api.ts  samples.ts
ui/src/styles/: globals.css  theme.css
(+15 files in other folders)
